2019-06-18  Thomas Schwinge  <thomas@codesourcery.com>

	PR middle-end/90862
	* c-c++-common/goacc/declare-1.c: Update.
	* c-c++-common/goacc/declare-2.c: Likewise.

2019-06-18  Marek Polacek  <polacek@redhat.com>

	PR c++/84698
	* g++.dg/cpp0x/noexcept42.C: New test.

	PR c++/71548
	* g++.dg/cpp0x/variadic177.C: New test.

2019-06-18  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.target/aarch64/sve/struct_vect_18.c: Allow branches to
	contain dots.
	* gcc.target/aarch64/sve/struct_vect_19.c: Likewise.
	* gcc.target/aarch64/sve/struct_vect_20.c: Likewise.
	* gcc.target/aarch64/sve/struct_vect_21.c: Likewise.
	* gcc.target/aarch64/sve/struct_vect_22.c: Likewise.
	* gcc.target/aarch64/sve/struct_vect_23.c: Likewise.
	* gcc.target/aarch64/sve/unroll-1.c: Likewise.
	* gcc.target/aarch64/sve/while_1.c: Check for b.any.

2019-06-18  Uroš Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/pr81563.c (dg-final): Check that no
	registers are restored from %esp.

2019-06-18  Richard Biener  <rguenther@suse.de>

	PR debug/90900
	* gcc.dg/gomp/pr90900.c: New testcase.

2019-06-18  Martin Sebor  <msebor@redhat.com>

	* gcc.dg/pr90866-2.c: Remove a pointless declaration
	to avoid compilation errors on arm-none-eabi.

2019-06-18  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* gcc.target/aarch64/pcs_attribute-2.c: Remove ifunc usage.
	* gcc.target/aarch64/pcs_attribute-3.c: New test.

2019-06-18  Alejandro Martinez  <alejandro.martinezvicente@arm.com>
	* gcc.target/aarch64/sve/fadda_1.c: New test.

2019-06-17  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/vect/vect-simd-8.c: New test.
	* gcc.dg/vect/vect-simd-9.c: New test.
	* g++.dg/vect/simd-2.cc: New test.
	* g++.dg/gomp/scan-1.C: New test.

2019-06-17  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/62055
	* gcc.target/i386/fnabs.c: New test.

2019-06-17  Marek Polacek  <polacek@redhat.com>

	PR c++/83820 - excessive attribute arguments not detected.
	* g++.dg/cpp0x/gen-attrs-67.C: New test.
